# exam2pptvideo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: testpypi.yml
docs/: exam2pptvideo.es.html  exam2pptvideo.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: exam2pptvideo.es.rst.txt  exam2pptvideo.rst.txt  index.rst.txt  modules.rst.txt
exam2pptvideo/: __init__.py  exam_ppt.py  exam_video.py  lib.py  sentence_ppt.py  vocab_phrase_ppt.py
exam2pptvideo/_entry/: command.py  validation.py
exam2pptvideo/de/: exam_video.py  sentence_exam.py  sentence_ppt.py  vocab_phrase_ppt.py
exam2pptvideo/de/soundaffects/: Lass_uns_eine_Prüfung_machen.m4a  Perfekt.m4a  Sehr_gut.m4a  So_lala.m4a  calculate.m4a  cover.m4a  ending.m4a  question.m4a
exam2pptvideo/de/templates/: exam_german_classic.pptx
exam2pptvideo/en/: choices_exam.py  exam_video.py  sentence_exam.py  sentence_ppt.py  vocab_phrase_ppt.py
exam2pptvideo/en/soundaffects/: 0-50.m4a  Just_so_so.m4a  Let's_have_an_exam.m4a  Perfect.m4a  Very_good.m4a  analysis.m4a  calculate.m4a  cover.m4a  openning.m4a  wrong.m4a
exam2pptvideo/en/templates/: exam_english_classic.pptx
exam2pptvideo/es/: choices_exam.py  exam_video.py  sentence_exam.py  sentence_ppt.py  vocab_phrase_ppt.py
exam2pptvideo/es/soundaffects/: 100.m4a  60-90.m4a  Asi_Asi.m4a  Muy_Bien.m4a  Perfecto.m4a  Vamos_a_tomar_un_examen.m4a  analysis.m4a  calculate.m4a  correct.m4a
exam2pptvideo/es/templates/: exam_spanish_classic.pptx  spanish_exam_0513_night.pptx  spanish_exam_0516.pptx
tests/: test_exam2pptvideo.py
